# mascopy

./: .gitignore  BUILD_GUIDE.md  LICENSE  MasCopy.spec  README.md  build_app.sh  build_electron.sh  config.py  create_dmg.sh  icon.icns  main.js  main.py  mascopy.icns  media_scanner.py  package-lock.json  package.json  publish_release.sh  release.md  requirements.txt  setup.py  sign_app.sh  ui.py  uploader.py
legacy/: BUILD_GUIDE.md  package-lock.legacy.json  release.md
legacy/scripts/: mascopy.js
legacy/src/: main.js
legacy/src/renderer/: app.js  ui-renderer.js
legacy/src/renderer/styles/: components.css  (+1 more)
scripts/: mascopy.js  release_dmg.sh
src/: App.vue  main.js  preload.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: analyzer.rs  config.rs  error.rs  lib.rs  main.rs  metadata.rs  scanner.rs  uploader.rs
src-ui/: package-lock.json  package.json
src-ui/src/: App.vue
src-ui/src/components/: FileSelector.vue  FileTable.vue  LogViewer.vue  Modal.vue  StatusCard.vue  TabView.vue
src-ui/src/composables/: useAppState.js
src-ui/src/styles/: main.css  theme.css
src-ui/src/views/: Home.vue
src/components/: FileSelector.vue  FileTable.vue  LogViewer.vue  PathSelector.vue  ProgressBar.vue  TabView.vue
src/renderer/: app.js  index.html
src/renderer/js/: app.js
src/renderer/styles/: components.css  main.css  tabs.css
src/services/: configManager.js  mediaScanner.js  mediaUploader.js
src/styles/: main.css
src/views/: Home.vue
ui/: __init__.py  dialogs.py  main_window.py  styles.py
