[package]
name = "app"
version = "3.0.4"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = ["macos-private-api"] }
tauri-plugin-log = "2"
walkdir = "2.5.0"
kamadak-exif = "0.6.1"
lofty = "0.22.2"
chrono = "0.4.42"
anyhow = "1.0.100"
directories = "6.0.0"
filetime = "0.2.26"
tokio = { version = "1.48.0", features = ["full"] }
tauri-plugin-dialog = "2.4.2"
thiserror = "2.0.17"
